2011-05-05 John Wu <John dot Wu at ACM dot org>
	* src/capi.cpp: add support for categorical values through
	function fastbit_add_values (the patch from Mario D. Santana only
	dealt with text type not category type)
	* tests/Makefile.am: add tests to prevent test data to be
	generated multiple times
	* util.h: add macros FASTBIT_FLOAT_NULL and FASTBIT_DOUBLE_NULL to
	denote the null values used for float and double.  this is an
	attempt to get around the problem with STLPORT having an incorrect
	value for quiet_NaN (a problem reported by Alexandre Maurel
	* configure.ac: add option --disable-quiet-nan to avoid using
	quiet nan as null values

2011-05-04 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: remove idcol from index::create
	* src/ikeywords.h, src/ikeywords.cpp: refactor the default
	constructor of ibis::keywords to make more consistent use of the
	internal parser (to address a problem reported by Gunter Hick
	<hick at scigames.at>)
	* src/category.h, src/category.cpp: add functions
	text::TDListForKeywordIndex and delimitersForKeywordIndex
	* configure.ac: add option --enable-static-pic to add options
	"-static -fPIC".  These flags are needed for compute node linux

2011-04-19 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: change part::buildIndexes and
	part::purgeIndexFiles from using writeLock to using readLock

2011-04-18 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.cpp:955 add variable evt to make the log
	message more uniform in function fileManager::tryGetFile

2011-04-07 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: update test case 2 of check-ibis to match the
	changes in printing formats in examples/ibis.cpp
	* examples/ibis.cpp, examples/ardea.cpp: add calls to buildIndexes
	before performinging queries in an attempt to reproduce the
	problem reported by Chavdar Kopoev
	* src/part.cpp, src/mensa.cpp: change mensa::buildIndexes to call
	part::buildIndexes and part::buildIndexes to always use